--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   },
   "homepage": "https://github.com/nnguy152/02-Project#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
+    "method-override": "^2.3.10",
     "mongoose": "^5.0.7",
-    "npm": "^5.7.1"
+    "npm": "^5.7.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
