--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "calendar": "^0.1.0",
     "connect-flash": "^0.1.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "favicon": "0.0.2",
     "hbs": "^4.0.1",
     "materialize-css": "^0.100.2",
     "method-override": "^2.3.10",
